[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/UI/Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x16.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_scene = "res://game/UI/Menus/MainMenu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -170.0
margin_right = 282.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -110.0
margin_right = 158.0
margin_bottom = 110.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Panel/VBoxContainer"]
pause_mode = 2
margin_right = 316.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Continuar"

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
pause_mode = 2
margin_top = 48.0
margin_right = 316.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "Opciones"

[node name="Menu" type="Button" parent="Panel/VBoxContainer"]
pause_mode = 2
margin_top = 96.0
margin_right = 316.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "Volver a Menu"

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 144.0
margin_right = 316.0
margin_bottom = 148.0

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 152.0
margin_right = 316.0
margin_bottom = 156.0

[node name="HSeparator5" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 160.0
margin_right = 316.0
margin_bottom = 164.0

[node name="HSeparator6" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 168.0
margin_right = 316.0
margin_bottom = 172.0

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
pause_mode = 2
margin_top = 176.0
margin_right = 316.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Salir"
[connection signal="button_up" from="Panel/VBoxContainer/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/Menu" to="." method="_on_Menu_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/Exit" to="." method="_on_Exit_button_up"]
